# orc-works

./: .gitattributes  .gitignore  README.md  go-run.ps1  package.json  run-app.ps1  run-backend.ps1  run-backend.sh  run-frontend.ps1  run-frontend.sh  run.ps1  run.py  setup-backend.ps1  setup-backend.sh  wx-run.ps1
_docs/: info.txt  instructions.txt  ocr-plan.txt  rtx-4070.txt
_docs/EasyOCR/: README.md  api.md  cli.md  custom-models.md  detection.md  package-layout.md  packaging.md  recognition.md  tests.md  training.md
_docs/GLM-OCR/: 01-overview.md  02-architecture.md  03-sdk-and-cli.md  04-core-pipeline.md  05-backend-service.md  06-frontend-app.md  07-examples-deployment-finetune.md  08-skills-and-agent-assets.md  09-file-map.md  README.md
_docs/MinerU/: README.md  backends.md  cli.md  data-and-models.md  http-api.md  hybrid_backend.md  install.md  integrations.md  office.md  output.md  overview.md  package-layout.md  pipeline_backend.md  python-usage.md  server.md  settings.md  vlm_backend.md  vs_others.md
_docs/MiniCPM-V/: README.md  demos.md  dependencies.md  evaluation.md  finetuning.md  inference.md  layout.md  models.md  (+2 more)
frontend/: index.html  package-lock.json  package.json
go-ocr-src/: worker.py
legacy/: _inspect.py  run.ps1  run.py
marker-code/: server.py
src/: package-lock.json  requirements.txt  worker.py
tauri-orc-src/: package.json
wx-ocr-src/: CMakeLists.txt  requirements-1.txt  requirements-2.txt  requirements.txt  worker.py
wx-ocr-src/src/: FlatButton.cpp  FlatButton.h  Metrics.cpp  Metrics.h  VBar.cpp  VBar.h  Worker.cpp  Worker.h  ZoomPanel.cpp  ZoomPanel.h  main.cpp  orcgui.rc
(+346 files in other folders)
